minor change to base64 encoding and decoding